--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "wp-persistent-checkboxes",
   "version": "1.0.0",
   "description": "Wordpress block for checkboxes that persist their state in localStorage",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.2"
   },
