--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "1.0.0",
   "description": "Wordpress block for checkboxes that persist their state in localStorage",
   "main": "src/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.2"
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "develop": "webpack --mode=development --config webpack.config.js --watch",
+    "production": "webpack --mode=production --config webpack.config.js --progress"
   },
   "repository": {
     "type": "git",
