--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Wordpress block for checkboxes that persist their state in localStorage",
   "main": "src/index.js",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0"
+    "@babel/polyfill": "^7.0.0",
+    "react": "^16.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -12,13 +13,23 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "eslint": "^5.6.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "react-dom": "^16.5.2",
     "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "develop": "webpack --mode=development --config webpack.config.js --watch",
-    "production": "webpack --mode=production --config webpack.config.js --progress"
+    "start": "webpack-dev-server --config webpack.config.dev.js",
+    "production": "webpack --config webpack.config.js --progress"
   },
   "repository": {
     "type": "git",
