--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2"
   },
   "devDependencies": {
