--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.2"
+    "prop-types": "^15.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -21,6 +20,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
+    "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
@@ -30,7 +30,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --config webpack.config.dev.js",
-    "production": "webpack --config webpack.config.js --progress"
+    "production": "webpack --config webpack.config.js --mode production --progress"
   },
   "repository": {
     "type": "git",
