--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@wordpress/components": "^3.0.0",
+    "@wordpress/editor": "^3.0.0",
     "babel-loader": "^8.0.2",
     "eslint": "^5.6.0",
     "eslint-config-standard": "^12.0.0",
@@ -30,7 +32,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --config webpack.config.dev.js",
-    "production": "webpack --config webpack.config.js --mode production --progress"
+    "build": "webpack --config webpack.config.prod.js --progress"
   },
   "repository": {
     "type": "git",
