--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
     "rules": {
         "comma-dangle": "off",
         "indent": ["error", 4],
-        "object-curly-spacing": "off"
+        "object-curly-spacing": "off",
+        "react/display-name": "off",
+        "react/prop-types": "off"
     }
 }
