Add wp-element to deps.

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@wordpress/blocks": "^3.0.0",
-    "@wordpress/components": "^3.0.0",
-    "@wordpress/editor": "^3.0.0",
+    "@wordpress/blocks": "^6.0.2",
+    "@wordpress/components": "^7.0.2",
+    "@wordpress/editor": "^9.0.2",
+    "@wordpress/element": "^2.1.8",
     "babel-loader": "^8.0.2",
     "eslint": "^5.6.0",
     "eslint-config-standard": "^12.0.0",
