Add custom apt cache definition.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,3 +10,6 @@ pipelines:
           - ./build.sh
         artifacts:
           - build/wp-persistent-checkboxes.zip
+definitions:
+  caches:
+    apt: /var/cache/apt/archives
