Try update first.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,7 @@ pipelines:
         caches:
           - apt
         script:
-          - apt-get install zip
+          - apt-get update && apt-get install zip
           - ./build.sh
         artifacts:
           - build/wp-persistent-checkboxes.zip
