--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@wordpress/block-editor": "^3.5.0",
     "@wordpress/blocks": "^6.10.0",
+    "@wordpress/element": "^2.10.0",
     "md5": "^2.2.1"
   },
   "devDependencies": {
