--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Wordpress block for checkboxes that persist their state in localStorage.",
   "author": "Dylan Price",
   "email": "the.dylan.price@gmail.com",
-  "license": "UNLICENSED",
+  "license": "GPL-2.0-or-later",
   "private": true,
+  "keywords": [],
   "homepage": "https://bitbucket.org/dylanfprice/wp-persistent-checkboxes#readme",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@bitbucket.org/dylanfprice/wp-persistent-checkboxes.git"
   },
+  "bugs": null,
   "main": "build/index.js",
   "dependencies": {
     "@wordpress/block-editor": "^3.5.0",
@@ -26,7 +28,7 @@
   "scripts": {
     "start": "wp-scripts start",
     "build": "wp-scripts build",
-    "lint": "wp-scripts lint-js && wp-scripts lint-style",
+    "lint": "wp-scripts lint-pkg-json && wp-scripts lint-js && wp-scripts lint-style",
     "test": "wp-scripts test-unit-js",
     "test:debug": "node inspect node_modules/.bin/jest --runInBand"
   },
