--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1.1.0
       with:
-        version: lts
+        version: '12.x'
     - uses: actions/cache@v1.1.2
       with:
         path: /var/cache/apt/archives
