--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         name: plugin
         path: build/wp-persistent-checkboxes.zip
   release:
+    needs: build
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/download-artifact@v1.0.0
