--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
     needs: build
     runs-on: [ubuntu-latest]
     steps:
-      - uses: actions/download-artifact@v1.0.0
+      - uses: olegtarasov/get-tag@v1
+      - if: success()
+        uses: actions/download-artifact@v1.0.0
         with:
           name: plugin
           path: wp-persistent-checkboxes.zip
