--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,10 @@ jobs:
     needs: build
     runs-on: [ubuntu-latest]
     steps:
-      - uses: olegtarasov/get-tag@v1
+      - id: get_tag
+        uses: olegtarasov/get-tag@v1
       - if: success()
-        run: echo $GITHUB_TAG_NAME
+        run: echo ${{ steps.get_tag.outputs.tag }}
       - if: success()
         uses: actions/download-artifact@v1.0.0
         with:
