--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,5 @@ jobs:
         uses: yakuhzi/action-release@v1.2.0
         with:
           file: wp-persistent-checkboxes.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
