--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/download-artifact@v1.0.0
         with:
           name: plugin
-          path: ./wp-persistent-checkboxes.zip
+          path: .
       - id: create_release
         uses: actions/create-release@v1
         env:
