--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/upload-artifact@v1.0.0
       with:
         name: plugin
-        path: build/wp-persistent-checkboxes.zip
+        path: build/persistent-checkboxes.zip
   release:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
@@ -22,6 +22,10 @@ jobs:
         with:
           name: plugin
           path: .
+      - id: changelog_reader
+        uses: mindsers/changelog-reader-action@v1
+        with:
+          version: ${{ github.ref }}
       - id: create_release
         uses: actions/create-release@v1
         env:
@@ -29,6 +33,7 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
+          body: ${{ steps.changelog_reader.outputs.log_entry }}
           draft: false
           prerelease: false
       - uses: actions/upload-release-asset@v1
@@ -36,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./wp-persistent-checkboxes.zip
-          asset_name: wp-persistent-checkboxes.zip
+          asset_path: ./persistent-checkboxes.zip
+          asset_name: persistent-checkboxes.zip
           asset_content_type: application/zip
