--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ jobs:
       with:
         name: plugin
         path: build/persistent-checkboxes.zip
+    - uses: actions.upload-artifact@v1.0.0
+      with:
+        name: changelog
+        path: ./CHANGELOG.md
   release:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
@@ -21,6 +25,10 @@ jobs:
       - uses: actions/download-artifact@v1.0.0
         with:
           name: plugin
+          path: .
+      - uses: actions/download-artifact@v1.0.0
+        with:
+          name: changelog
           path: .
       - id: changelog_reader
         uses: mindsers/changelog-reader-action@v1.0.1
