--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         name: plugin
         path: build/persistent-checkboxes.zip
-    - uses: actions.upload-artifact@v1.0.0
+    - uses: actions/upload-artifact@v1.0.0
       with:
         name: changelog
         path: ./CHANGELOG.md
