--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/upload-artifact@v1.0.0
       with:
         name: changelog
-        path: ./CHANGELOG.md
+        path: CHANGELOG.md
   release:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
