--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,22 +13,15 @@ jobs:
       with:
         name: plugin
         path: build/persistent-checkboxes.zip
-    - uses: actions/upload-artifact@v1.0.0
-      with:
-        name: changelog
-        path: CHANGELOG.md
   release:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
     runs-on: [ubuntu-latest]
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/download-artifact@v1.0.0
         with:
           name: plugin
-          path: .
-      - uses: actions/download-artifact@v1.0.0
-        with:
-          name: changelog
           path: .
       - id: changelog_reader
         uses: mindsers/changelog-reader-action@v1.0.1
