--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,14 @@ jobs:
       with:
         name: plugin
         path: build/persistent-checkboxes.zip
+    - run: ls ./CHANGELOG.md
   release:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
+      - run: ls ./CHANGELOG.md
       - uses: actions/download-artifact@v1.0.0
         with:
           name: plugin
